<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.telamin.fluxtion</groupId>
        <artifactId>fluxtion-examples</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>file-feed-sink-demo</artifactId>
    <name>sample-apps.file-feed-sink-demo</name>
    <packaging>jar</packaging>
    
    <properties>
        <app.args></app.args>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.telamin.fluxtion</groupId>
            <artifactId>fluxtion-builder</artifactId>
            <version>${fluxtion.version}</version>
        </dependency>
        <dependency>
            <groupId>com.telamin.fluxtion</groupId>
            <artifactId>fluxtion-runtime</artifactId>
            <version>${fluxtion.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.telamin.fluxtion.example.sampleapps.FileFeedSinkDemo</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.telamin.fluxtion.example.sampleapps.FileFeedSinkDemo</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <mainClass>com.telamin.fluxtion.example.sampleapps.FileFeedSinkDemo</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>run-with-opens</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/java</executable>
                            <arguments>
                                <argument>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argument>
                                <argument>-cp</argument>
                                <argument>%classpath</argument>
                                <argument>com.telamin.fluxtion.example.sampleapps.FileFeedSinkDemo</argument>
                            </arguments>
                            <classpathScope>runtime</classpathScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>